# terminal

./: Cargo.toml  LICENSE  linker.ld
.cargo/: config.toml
src/: lib.rs  main.rs
src/render/: colors.rs  font.rs  mod.rs  text.rs
src/shell/: context.rs  mod.rs
src/shell/commands/: builtin.rs  fs.rs  mod.rs  system.rs
src/state/: mod.rs  terminal.rs
src/ui/: decorations.rs  mod.rs  window.rs
